--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
-DB_USER="postgres"
-DB_HOST="localhost"
-DB_NAME="bhavani"
-DB_PASSWORD="555"
+DB_USER="colo_candy_user"
+DB_HOST="dpg-cvvt6tmuk2gs73dll2q0-a"
+DB_NAME="colo_candy"
+DB_PASSWORD="98r91H5GE0PEBGBySoHWpCB3JuXs6Nde"
 DB_PORT="5432"
 PORT="5000"
 
