--- a/src/.env
+++ b/src/.env
@@ -1,8 +1,9 @@
 DB_USER="colo_candy_user"
-DB_HOST="dpg-cvvt6tmuk2gs73dll2q0-a"
+DB_HOST="dpg-cvvt6tmuk2gs73dll2q0-a.singapore-postgres.render.com"
 DB_NAME="colo_candy"
 DB_PASSWORD="98r91H5GE0PEBGBySoHWpCB3JuXs6Nde"
 DB_PORT="5432"
 PORT="5000"
 
 SECRET="GYP@v@nk@ly@n555"
+//postgresql://colo_candy_user:98r91H5GE0PEBGBySoHWpCB3JuXs6Nde/colo_candy
